--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "browserify-fs": "^1.0.0",
+    "firebase": "^8.4.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
